# CSU44052_FinalProj

./: .clangd  .gitignore  CMakeLists.txt  imgui.ini
assets/alice_in_wonderland_book/: license.txt  scene.gltf
assets/arch_tree/: scene.gltf
assets/arch_tree_-_stylized_animated_model/: license.txt
assets/cheese_moon/: license.txt  scene.gltf
assets/hostel_tree_-_stylized_landscape/: license.txt  scene.gltf
shaders/: MushroomLight.frag  MushroomLight.vert  arch_tree.frag  bot.vert  lens_flare.frag  mushroom_light.vert  pbr.frag  pbr.vert  phoenix.frag  phoenix.vert  shadow_depth.frag  shadow_depth.geom  shadow_depth.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  terrain_debug.geom  toon_postprocess.frag
src/: Camera.cpp  Camera.hpp  Cube.hpp  Drawable.hpp  Entities.cpp  Entities.hpp  GUIManager.hpp  InputManager.hpp  LightingParams.hpp  Loadable.hpp  Model.hpp  Perlin.cpp  Perlin.hpp  PostProcessing.cpp  PostProcessing.hpp  ResourceManager.cpp  Shader.cpp  Shader.hpp  ShadowMap.hpp  SkyBox.cpp  SkyBox.hpp  Terrain.cpp  Terrain.hpp  Window.cpp  Window.hpp  WindowManager.hpp  main.cpp  tests.hpp  utils.cpp  utils.hpp
src/core/: Camera.cpp  Camera.hpp  Drawable.hpp  EBO.cpp  EBO.hpp  Entities.cpp  Entities.hpp  Loadable.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelEntity.cpp  ModelEntity.hpp  Perlin.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SharedModelResources.cpp  SharedModelResources.hpp  SkyBox.cpp  Texture.cpp  Texture.hpp  Timer.hpp  Updateable.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Window.cpp  Window.hpp  tinygltf_impl.cpp  utils.cpp  utils.hpp
src/models/: ArchTree.cpp  ArchTree.hpp  CheeseMoon.cpp  CheeseMoon.hpp  MushroomLight.cpp  MushroomLight.hpp  MushroomLightSpawner.cpp  MushroomLightSpawner.hpp  Phoenix.cpp  Phoenix.hpp
